--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -59,6 +59,11 @@ select {
   font: inherit;
 }
 
+button {
+  padding: 0;
+  cursor: pointer;
+}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
