--- a/src/styles/customDatePicker.css
+++ b/src/styles/customDatePicker.css
@@ -14,6 +14,7 @@
   line-height: 1.5;
   color: #333;
   font-family: inherit;
+  border: none;
 }
 .react-datepicker__month-container {
   inline-size: 100%;
