[Modify] 캘린더 상태관리 코드 수정
- useState를 사용하여 캘린더 dateRange 상태관리
- PlaceList 페이지 추가 및 navigation 수정
- navigation에 lazy import 사용

--- a/src/styles/customDatePicker.css
+++ b/src/styles/customDatePicker.css
@@ -3,6 +3,10 @@
   height: 100dvh;
 }
 
+div:has(> .react-datepicker__input-container) {
+  inline-size: 100%;
+}
+
 .react-datepicker {
   inline-size: 100%;
   min-inline-size: 280px;
